# upbuild

./: Cargo.toml  README.md
src/: app.rs  cli.rs  config.rs  docker_ops.rs  file_browser.rs  git_ops.rs  main.rs  main_bu.rs  settings.rs  shell.rs
